# featherweight-solidity

./: ParecerOrientador-NaoCaducidade.doc  README.md  a.out  dune  dune-project  featherweightsolidity.opam  requerimento-naocaducidade.doc  run.py
.github/workflows/: main.yml
contracts/: BloodBank.sol  Donor.sol  appliertest.sol  arit.sol  bank.sol  bank1.sol  bool.sol  contract.sol  eoacontract.sol  example.sol  inheritance.sol  teste.sol  teste1.sol  teste3.sol  wallet.sol
contracts/imports/: Donor.sol
contracts/openzeppelin/: Context.sol  ERC20.sol  ERC721.sol  Game.sol  Main.sol  MaliciousNFTStorage.sol  NFT.sol  NFTStorage.sol  Ownable.sol  UnprotectedGame.sol
contracts/simple_tests/: arit.sol  assign.sol  bool.sol  cast.sol  cast1.sol  if.sol  inheritance.sol  neg_arit.sol  neg_assign.sol  neg_bool.sol  neg_cast.sol  neg_cast3.sol  neg_if.sol  neg_mapread.sol  neg_mapread1.sol
example/: Ownable.sol
lib/: c3.ml  c3aux.ml  contracts.ml  dune  example.py  example_fail.py  fs.ml  lexer.mll  parser.conflicts  parser.mly  pprinters.ml  simpletypechecker.ml  typechecker.ml  types.ml  utils.ml
test/: dune  featherweightsolidity.ml  tests.ml
